--- a/PrimeValLife.Web/Views/Shared/_Layout.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/theme/favicon.svg" />
     <!-- Template CSS -->
+    <link rel="stylesheet" href="assets/css/plugins/slider-range.css" />
     <link rel="stylesheet" href="assets/css/main.css?v=5.6" />
     <link rel="stylesheet" href="assets/css/common.css" />
     @RenderSection("styles", required: false)
@@ -495,7 +496,7 @@
             </div>
         </div>
     </div>
-    <!-- Vendor JS-->
+    <!-- Vendor JS-->   
     <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
     <script src="assets/js/vendor/jquery-migrate-3.3.0.min.js"></script>
@@ -503,6 +504,7 @@
     <script src="assets/js/plugins/slick.js"></script>
     <script src="assets/js/plugins/jquery.syotimer.min.js"></script>
     <script src="assets/js/plugins/wow.js"></script>
+    <script src="assets/js/plugins/slider-range.js"></script>
     <script src="assets/js/plugins/perfect-scrollbar.js"></script>
     <script src="assets/js/plugins/magnific-popup.js"></script>
     <script src="assets/js/plugins/select2.min.js"></script>
