--- a/PrimeValLife.Web/wwwroot/assets/css/main.css
+++ b/PrimeValLife.Web/wwwroot/assets/css/main.css
@@ -5186,9 +5186,12 @@ table .product-thumbnail img {
   padding-top: 15px;
 }
 
-.button.button-add-to-cart {
-  padding: 8px 40px;
+.button.button-add-to-cart, .button.button-buy-now {
+    padding: 8px 40px;
 }
+
+
+
 
 .product-extra-link2 a {
   background: #fff none repeat scroll 0 0;
@@ -5221,21 +5224,21 @@ table .product-thumbnail img {
   opacity: 0.6;
 }
 
-.product-extra-link2 .button.button-add-to-cart {
-  position: relative;
-  padding: 0px 20px;
-  border-radius: 5px;
-  border: 0;
-  height: 50px;
-  line-height: 50px;
-  font-weight: 700;
-  font-size: 16px;
-  font-family: "Quicksand", sans-serif;
+.product-extra-link2 .button.button-add-to-cart, .button.button-buy-now {
+    position: relative;
+    padding: 0px 20px;
+    border-radius: 5px;
+    border: 0;
+    height: 50px;
+    line-height: 50px;
+    font-weight: 700;
+    font-size: 16px;
+    font-family: "Quicksand", sans-serif;
 }
 
-.product-extra-link2 .button.button-add-to-cart i {
-  margin-right: 10px;
-}
+    .product-extra-link2 .button.button-add-to-cart i, .button.button-buy-now i {
+        margin-right: 10px;
+    }
 
 .product-info {
   border: 1px solid #ececec;
@@ -11503,12 +11506,12 @@ footer .hotline img {
     padding: 11px 20px 11px 10px;
     max-width: 60px;
   }
-  .detail-info .product-extra-link2 .button.button-add-to-cart {
-    padding: 0px 15px;
-  }
-  .detail-info .product-extra-link2 .button.button-add-to-cart i {
-    display: none;
-  }
+    .detail-info .product-extra-link2 .button.button-add-to-cart, .button.button-buy-now {
+        padding: 0px 15px;
+    }
+        .detail-info .product-extra-link2 .button.button-add-to-cart i, .button.button-buy-now i {
+            display: none;
+        }
   .shopping-summery table tbody tr img {
     max-width: 80px;
     margin-right: 15px;
