--- a/PrimeValLife.Web/Views/Account/Register.cshtml
+++ b/PrimeValLife.Web/Views/Account/Register.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Sign Up";
 }
+@section scripts {
+    <script src="js/account/register.js"></script>
+}
 
 <main class="main pages">
     <div class="page-header breadcrumb-wrap">
@@ -23,17 +26,17 @@
                                         <h1 class="mb-5">Create an Account</h1>
                                         <p class="mb-30">Already have an account? <a asp-controller="Account" asp-action="Login">Login</a></p>
                                     </div>
-                                    <form method="post">
+                                    <div>
                                         <div class="form-group">
-                                            <input type="text" required="" name="email" placeholder="Email" />
+                                            <input type="text" required="" id="txtEmail" placeholder="Email" />
                                         </div>
                                         <div class="form-group">
-                                            <input required="" type="password" name="password" placeholder="Password" />
+                                            <input required="" type="password" id="txtPassword" placeholder="Password" />
                                         </div>
                                         <div class="form-group">
-                                            <input required="" type="password" name="password" placeholder="Confirm password" />
+                                            <input required="" type="password" id="txtConfirmPass" placeholder="Confirm password" />
                                         </div>
-                                        <div class="login_footer form-group mb-50">
+                                        <div class="login_footer form-group mb-20">
                                             <div class="chek-form">
                                                 <div class="custome-checkbox">
                                                     <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox12" value="" />
@@ -43,10 +46,10 @@
                                             <a href="page-privacy-policy.html"><i class="fi-rs-book-alt mr-5 text-muted"></i>Lean more</a>
                                         </div>
                                         <div class="form-group mb-30">
-                                            <button type="submit" class="btn btn-fill-out btn-block hover-up font-weight-bold" name="login">Submit &amp; Register</button>
+                                            <button id="btnSubmit" class="btn btn-fill-out btn-block hover-up font-weight-bold" name="login">Submit &amp; Register</button>
                                         </div>
                                         <p class="font-xs text-muted"><strong>Note:</strong>Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our privacy policy</p>
-                                    </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
