--- a/PrimeValLife.Web/Views/Shared/_Layout.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Layout.cshtml
@@ -382,6 +382,7 @@
     <!--End header-->
     @RenderBody()
     @Html.Partial("_Toasters")
+    @Html.Partial("_Global")
     <footer class="main">
         
         <section class="featured section-padding">
