--- a/PrimeValLife.Web/Views/Products/ProductView.cshtml
+++ b/PrimeValLife.Web/Views/Products/ProductView.cshtml
@@ -113,8 +113,8 @@
                                                 <a href="#" id="qty-up" class="qty-up"><i class="fi-rs-angle-small-up"></i></a>
                                             </div>
                                             <div class="product-extra-link2">
-                                                <button type="submit" class="button button-add-to-cart"><i class="fi-rs-shopping-cart"></i>Add to cart</button>
-                                                <button type="submit" class="button button-buy-now"><i class="fi-rs-shopping-bag"></i>Buy Now</button>
+                                                <button type="submit" id="addToCart" class="button button-add-to-cart"><i class="fi-rs-shopping-cart"></i>Add to cart</button>
+                                                    <button type="submit" id="buyNow" class="button button-buy-now"><i class="fi-rs-shopping-bag"></i>Buy Now</button>
                                                 <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
                                             </div>
                                         </div>
@@ -193,7 +193,7 @@
                                                 </div>
                                             </div>
                                             <ul class="contact-infor mb-50">
-                                                <li><img src="assets/imgs/theme/icons/icon-location.svg" alt="" /><strong>Address: </strong> <span>@Model.ProductVendor.Address.Street ,@Model.ProductVendor.Address.City ,@Model.ProductVendor.Address.State ,@Model.ProductVendor.Address.ZipCode </span></li>
+                                                <li><img src="assets/imgs/theme/icons/icon-location.svg" alt="" /><strong>Address: </strong> <span>@Model.ProductVendor.Address.AddressLine1 ,@Model.ProductVendor.Address.City ,@Model.ProductVendor.Address.State ,@Model.ProductVendor.Address.ZipCode </span></li>
                                                 <li><img src="assets/imgs/theme/icons/icon-contact.svg" alt="" /><strong>Contact Seller:</strong><span>(+91) @Model.ProductVendor.Address.Phone</span></li>
                                             </ul>
                                             <div class="d-flex mb-55">
@@ -493,6 +493,7 @@
     <script>
         let product = @Html.Raw(Json.Serialize(Model))
     </script>
+    <script src="~/assets/js/products/productapis.js"></script>
     <script src="~/assets/js/products/productview.js"></script>
 }qty
 
