--- a/PrimeValLife.Web/Views/Account/Login.cshtml
+++ b/PrimeValLife.Web/Views/Account/Login.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Sign In";
 }
+@section scripts {
+    <script src="js/account/login.js"></script>
+}
 
 <main class="main pages">
     <div class="page-header breadcrumb-wrap">
@@ -26,26 +29,26 @@
                                         <h1 class="mb-5">Login</h1>
                                         <p class="mb-30">Don't have an account? <a asp-controller="Account" asp-action="Register">Create here</a></p>
                                     </div>
-                                    <form method="post">
+                                    <div>
                                         <div class="form-group">
-                                            <input type="text" required="" name="email" placeholder="Username or Email *" />
+                                            <input id="txtEmail" type="text" required="" name="email" placeholder="Username or Email *" />
                                         </div>
                                         <div class="form-group">
-                                            <input required="" type="password" name="password" placeholder="Your password *" />
+                                            <input id="txtPassword" required="" type="password" name="password" placeholder="Your password *" />
                                         </div>
                                         <div class="login_footer form-group mb-50">
                                             <div class="chek-form">
                                                 <div class="custome-checkbox">
-                                                    <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="" />
+                                                    <input class="form-check-input" type="checkbox" name="checkbox" id="cbRememberMe" value="" />
                                                     <label class="form-check-label" for="exampleCheckbox1"><span>Remember me</span></label>
                                                 </div>
                                             </div>
                                             <a class="text-muted" asp-controller="Account" asp-action="ForgotPassword">Forgot password?</a>
                                         </div>
                                         <div class="form-group">
-                                            <button type="submit" class="btn btn-heading btn-block hover-up" name="login">Log in</button>
+                                            <button id="btnSubmit" class="btn btn-heading btn-block hover-up" name="login">Log in</button>
                                         </div>
-                                    </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
