--- a/PrimeValLife.Web/Views/Shared/_Layout.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject IIdentityService _iservice;
+<!DOCTYPE html>
 <html class="no-js" lang="en">
 
 <head>
@@ -109,16 +110,19 @@
                                         <img class="svgInject" alt="Nest" src="assets/imgs/theme/icons/icon-user.svg" />
                                     </a>
                                     <a href="page-account.html"><span class="lable ml-0">Account</span></a>
-                                    <div class="cart-dropdown-wrap cart-dropdown-hm2 account-dropdown">
-                                        <ul>
-                                            <li><a href="page-account.html"><i class="fi fi-rs-user mr-10"></i>My Account</a></li>
-                                            <li><a href="page-account.html"><i class="fi fi-rs-location-alt mr-10"></i>Order Tracking</a></li>
-                                            <li><a href="page-account.html"><i class="fi fi-rs-label mr-10"></i>My Voucher</a></li>
-                                            <li><a href="shop-wishlist.html"><i class="fi fi-rs-heart mr-10"></i>My Wishlist</a></li>
-                                            <li><a href="page-account.html"><i class="fi fi-rs-settings-sliders mr-10"></i>Setting</a></li>
-                                            <li><a asp-controller="Account" asp-action="Logout"><i class="fi fi-rs-sign-out mr-10"></i>Sign out</a></li>
-                                        </ul>
-                                    </div>
+                                    @if (_iservice.IsSignedIn(User))
+                                    {
+                                        <div class="cart-dropdown-wrap cart-dropdown-hm2 account-dropdown">
+                                            <ul>
+                                                <li><a href="page-account.html"><i class="fi fi-rs-user mr-10"></i>My Account</a></li>
+                                                <li><a href="page-account.html"><i class="fi fi-rs-location-alt mr-10"></i>Order Tracking</a></li>
+                                                <li><a href="page-account.html"><i class="fi fi-rs-label mr-10"></i>My Voucher</a></li>
+                                                <li><a href="shop-wishlist.html"><i class="fi fi-rs-heart mr-10"></i>My Wishlist</a></li>
+                                                <li><a href="page-account.html"><i class="fi fi-rs-settings-sliders mr-10"></i>Setting</a></li>
+                                                <li><a asp-controller="Account" asp-action="Logout"><i class="fi fi-rs-sign-out mr-10"></i>Sign out</a></li>
+                                            </ul>
+                                        </div>
+                                    }
                                 </div>
                             </div>
                         </div>
@@ -380,11 +384,13 @@
         </div>
     </div>
     <!--End header-->
+
     @RenderBody()
-    @Html.Partial("_Toasters")
-    @Html.Partial("_Global")
+    <partial></partial>
+    <partial name="_Toasters" />
+    <partial name="_Global" />
+
     <footer class="main">
-        
         <section class="featured section-padding">
             <div class="container">
                 <div class="row">
