--- a/PrimeValLife.Web/Views/_ViewImports.cshtml
+++ b/PrimeValLife.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PrimeValLife.Web
 @using PrimeValLife.Web.Models
+@using TUT.IAuth.IServices;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
