--- a/PrimeValLife.Web/Views/Dashboard/_Dashboard.cshtml
+++ b/PrimeValLife.Web/Views/Dashboard/_Dashboard.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="tab-pane fade active show" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
     <div class="card">
         <div class="card-header">
-            <h3 class="mb-0">Hello Rosie!</h3>
+            <h3 class="mb-0">Hello @User.Identity.Name</h3>
         </div>
         <div class="card-body">
             <p>
