--- a/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
+++ b/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
@@ -2,7 +2,7 @@
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model OrdersCheckOut
+@* @model OrdersCheckOut *@
 <main class="main">
     <div class="page-header breadcrumb-wrap">
         <div class="container">
