--- a/PrimeValLife.Web/Views/Shared/_Global.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Global.cshtml
@@ -6,5 +6,5 @@
     const baseUrl = '@Configuration["HostConfiguration:APIHost"]'
     const confirmOrderUrl = "Orders/CreateOrder"
     const confirmShippingInfoUrl = "Orders/CreateShippingInfo"
-    const directCheckOutUrl = "Products/directCheckOut"
+    const directCheckOutUrl = "api/Products/directCheckOut"
 </script>
