Add to Cart API

--- a/PrimeValLife.Web/Views/Shared/_Global.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Global.cshtml
@@ -7,4 +7,5 @@
     const confirmOrderUrl = "Orders/CreateOrder"
     const confirmShippingInfoUrl = "Orders/CreateShippingInfo"
     const directCheckOutUrl = "api/Products/directCheckOut"
+    const addToCartUrl = "api/OrdersApi/AddToCart"
 </script>
