Integrated Cart and CheckOut Page

--- a/PrimeValLife.Web/Views/Products/ProductView.cshtml
+++ b/PrimeValLife.Web/Views/Products/ProductView.cshtml
@@ -132,7 +132,7 @@
                                             </div>
                                             <div class="product-extra-link2">
                                                 <button type="submit" id="addToCart" class="button button-add-to-cart"><i class="fi-rs-shopping-cart"></i>Add to cart</button>
-                                                    <button type="submit" id="buyNow" class="button button-buy-now"><i class="fi-rs-shopping-bag"></i>Buy Now</button>
+                                                    <button type="submit" id="buyNow" class="button button-buy-now"><i class="fi-rs-shopping-bag"></i>@Html.ActionLink("Buy Now","OrdersCheckOut","Orders")</button>
                                                 <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
                                             </div>
                                         </div>
