--- a/PrimeValLife.Web/Views/Orders/_Cart.cshtml
+++ b/PrimeValLife.Web/Views/Orders/_Cart.cshtml
@@ -1,22 +1,22 @@
-﻿@model PrimeValLife.Web.Models.Orders.OrdersCheckOutView
+﻿@* @model PrimeValLife.Web.Models.Orders.OrdersCheckOutView *@
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-<div class="row">
+<div class="d-flex align-items-end justify-content-between mb-30">
     <div class="col-lg-8 mb-40">
         <h1 class="heading-2 mb-10">Your Cart</h1>
         <div class="d-flex justify-content-between">
-            <h6 class="text-body">There are <span class="text-brand"> @Model.Cart.CartItems.Count </span> products in your cart</h6>
+            <h6 class="text-body">There are <span class="text-brand"> @* @Model.Cart.CartItems.Count *@ </span> products in your cart</h6>
             @* <h6 class="text-body"><a href="#" class="text-muted"><i class="fi-rs-trash mr-5"></i>Clear Cart</a></h6> *@
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="col-lg-8">
+<div class="d-flex align-items-end justify-content-between">
+    <div>
         <div class="table-responsive shopping-summery">
             <table class="table table-wishlist">
-                <thead>
+                @* <thead>
                     <tr class="main-heading">
                         <th class="custome-checkbox start pl-30">
                             <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox11" value="">
@@ -28,9 +28,9 @@
                         <th scope="col">Subtotal</th>
                         <th scope="col" class="end">Remove</th>
                     </tr>
-                </thead>
+                </thead> *@
                 <tbody>
-                    <tr class="pt-30">
+                    <tr class="pt-30 w-75">
                         <td class="custome-checkbox pl-30">
                             <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="">
                             <label class="form-check-label" for="exampleCheckbox1"></label>
@@ -63,18 +63,14 @@
                         </td>
                         <td class="action text-center" data-title="Remove"><a href="#" class="text-body"><i class="fi-rs-trash"></i></a></td>
                     </tr>
-                    @foreach (var item in Model.CartProducts)
+                    @* @foreach (var item in Model.CartProducts)
                     {
-                        Html.RenderPartial("_CartProduct", item);
-                    }
+                        await Html.RenderPartialAsync("_CartProduct", item);
+                    } *@
                 </tbody>
             </table>
         </div>
         <div class="divider-2 mb-30"></div>
-        <div class="cart-action d-flex justify-content-between">
-            <a class="btn "><i class="fi-rs-arrow-left mr-10"></i>Continue Shopping</a>
-            <a class="btn  mr-10 mb-sm-15"><i class="fi-rs-refresh mr-10"></i>Update Cart</a>
-        </div>
         @* <div class="row mt-50">
             <div class="col-lg-5">
                 <div class="p-40">
@@ -89,58 +85,5 @@
                 </div>
             </div>
         </div> *@
-    </div>
-    <div class="col-lg-4">
-        <div class="border p-md-4 cart-totals ml-30">
-            <div class="table-responsive">
-                <table class="table no-border">
-                    <tbody>
-                        <tr>
-                            <td class="cart_total_label">
-                                <h6 class="text-muted">Subtotal</h6>
-                            </td>
-                            <td class="cart_total_amount">
-                                <h4 class="text-brand text-end" id="OrderTotal"></h4>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td scope="col" colspan="2">
-                                <div class="divider-2 mt-10 mb-10"></div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="cart_total_label">
-                                <h6 class="text-muted">Shipping</h6>
-                            </td>
-                            <td class="cart_total_amount">
-                                <h5 class="text-heading text-end" id="shippingCharge">Free</h4
-                            </td>
-                        </tr>
-                     @*    <tr>
-                            <td class="cart_total_label">
-                                <h6 class="text-muted">Estimate for</h6>
-                            </td>
-                            <td class="cart_total_amount">
-                                <h5 class="text-heading text-end">United Kingdom</h4
-                            </td>
-                        </tr> *@
-                        <tr>
-                            <td scope="col" colspan="2">
-                                <div class="divider-2 mt-10 mb-10"></div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="cart_total_label">
-                                <h6 class="text-muted">Total</h6>
-                            </td>
-                            <td class="cart_total_amount">
-                                <h4 class="text-brand text-end" id="netPayment">1220</h4>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <a href="#" class="btn mb-20 w-100">Proceed To CheckOut<i class="fi-rs-sign-out ml-15"></i></a>
-        </div>
     </div>
 </div>
