--- a/PrimeValLife.Web/Views/Orders/_CartProduct.cshtml
+++ b/PrimeValLife.Web/Views/Orders/_CartProduct.cshtml
@@ -1,6 +1,8 @@
 ﻿
 @model PrimeValLife.Web.Models.Products.CartProducts;
-<tr class="pt-30">
+
+<input value="@Model.ProrductId" id="productId" type="hidden" />
+<tr class="pt-30" id="cartProduct">
     <td class="custome-checkbox pl-30">
         <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="">
         <label class="form-check-label" for="exampleCheckbox1"></label>
