--- a/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
+++ b/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
@@ -1,4 +1,5 @@
 ﻿@model PrimeValLife.Web.Models.Orders.OrdersCheckOutView
+
 <main class="main">
     <div class="page-header breadcrumb-wrap">
         <div class="container">
@@ -11,10 +12,25 @@
     </div>
     <div class="container mb-80 mt-50">
         <div class="row">
-            <div class="col-lg-8 mb-40">
+            @* <div class="col-lg-8 mb-40">
                 <h1 class="heading-2 mb-10">Checkout</h1>
                 <div class="d-flex justify-content-between">
-                    <h6 class="text-body">There are <span class="text-brand">@Model.CartProducts.Count</span> Products in your cart</h6>
+                    @if (Model.Cart.CartItems!=null)
+                    {
+                        <h6 class="text-body">There are <span class="text-brand">@Model.Cart.CartItems.Count</span> Products in your cart</h6>
+                    }
+                    else{
+                        <h6 class="text-body">No Products in your cart</h6>
+                    }
+                </div>
+            </div> *@
+            <div class="col-lg-8 mb-40">
+                <h1 class="heading-2 mb-10">Your Cart</h1>
+                <div class="d-flex justify-content-between">@if (Model.Cart != null)
+                    {
+                        <h6 class="text-body">There are <span class="text-brand"> @Model.Cart.CartItems.Count </span> Products in your cart</h6>
+                    }
+                    @* <h6 class="text-body"><a href="#" class="text-muted"><i class="fi-rs-trash mr-5"></i>Clear Cart</a></h6> *@
                 </div>
             </div>
         </div>
@@ -22,8 +38,8 @@
             <div class="col-lg-7">
                 <div class="border p-40 cart-totals ml-30 mb-50">
                     @{
-                        await Html.RenderPartialAsync("_Cart",Model.CartProducts);
-                    };
+                        await Html.RenderPartialAsync("_Cart",Model.Cart);
+                    }
                 </div>
                 <div class="">
                     <div class="row border p-md-4 cart-totals    ml-30 ">
@@ -31,15 +47,15 @@
                         <h4 class="mb-30">Payment</h4>
                         <div class="payment_option">
                             <div class="custome-radio">
-                                <input class="form-check-input" required="" type="radio" name="payment_option" id="exampleRadios3" checked="">
+                                <input class="form-check-input" required="" type="radio" name="payment_option" id="exampleRadios3" value="netBanking" checked="">
                                 <label class="form-check-label" for="exampleRadios3" data-bs-toggle="collapse" data-target="#bankTranfer" aria-controls="bankTranfer">Direct Bank Transfer</label>
                             </div>
                             <div class="custome-radio">
-                                <input class="form-check-input" required="" type="radio" name="payment_option" id="exampleRadios4" checked="">
+                                <input class="form-check-input" required="" type="radio" name="payment_option" id="exampleRadios4" value="COD" checked>
                                 <label class="form-check-label" for="exampleRadios4" data-bs-toggle="collapse" data-target="#checkPayment" aria-controls="checkPayment">Cash on delivery</label>
                             </div>
                             <div class="custome-radio">
-                                <input class="form-check-input" required="" type="radio" name="payment_option" id="exampleRadios5" checked="">
+                                <input class="form-check-input" required="" type="radio" name="payment_option" id="exampleRadios5" value="paymentGateway1" checked="">
                                 <label class="form-check-label" for="exampleRadios5" data-bs-toggle="collapse" data-target="#paypal" aria-controls="paypal">Online Getway</label>
                             </div>
                         </div>
@@ -98,49 +114,11 @@
                                 </tbody>
                             </table>
                         </div>
-                        <a href="#" class="btn mb-20">Proceed To CheckOut<i class="fi-rs-sign-out ml-15"></i></a>
+                        <a  id="btnPlaceOrder" class="btn mb-20">Proceed To CheckOut<i class="fi-rs-sign-out ml-15"></i></a>
                     </div>
                 </div>  
             </div>
             <div class="col-lg-5">
-                <div class="row mb-50">
-                    <div class="col-lg-6 mb-sm-15 mb-lg-0 mb-md-3">
-                        <div class="toggle_info">
-                            <span><i class="fi-rs-user mr-10"></i><span class="text-muted font-lg">Already have an account?</span> <a href="#loginform" data-bs-toggle="collapse" class="collapsed font-lg" aria-expanded="false">Click here to login</a></span>
-                        </div>
-                        @* <div class="panel-collapse collapse login_form" id="loginform">
-                            <div class="panel-body">
-                                <p class="mb-30 font-sm">If you have shopped with us before, please enter your details below. If you are a new customer, please proceed to the Billing &amp; Shipping section.</p>
-                                <form method="post">
-                                    <div class="form-group">
-                                        <input type="text" name="email" placeholder="Username Or Email">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="password" placeholder="Password">
-                                    </div>
-                                    <div class="login_footer form-group">
-                                        <div class="chek-form">
-                                            <div class="custome-checkbox">
-                                                <input class="form-check-input" type="checkbox" name="checkbox" id="remember" value="">
-                                                <label class="form-check-label" for="remember"><span>Remember me</span></label>
-                                            </div>
-                                        </div>
-                                        <a href="#">Forgot password?</a>
-                                    </div>
-                                    <div class="form-group">
-                                        <button class="btn btn-md" name="login">Log in</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div> *@
-                    </div>
-                    @* <div class="col-lg-6">
-                        <form method="post" class="apply-coupon">
-                            <input type="text" placeholder="Enter Coupon Code...">
-                            <button class="btn  btn-md" name="login">Apply Coupon</button>
-                        </form>
-                    </div> *@
-                </div>
                 <div class="row">
                     <h4 class="mb-30">Billing Details</h4>
                     <form id="CheckOutForm">
@@ -188,27 +166,30 @@
                                 <input required="" type="text" name="email" placeholder="Email address *"id="billingEmail">
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="checkbox">
-                                <div class="custome-checkbox">
-                                    <input class="form-check-input" type="checkbox" name="checkbox" id="createaccount">
-                                    <label class="form-check-label label_info" data-bs-toggle="collapse" href="#collapsePassword" data-target="#collapsePassword" aria-controls="collapsePassword" for="createaccount"><span>Create an account?</span></label>
+                        @if (!User.Identity.IsAuthenticated){
+                            <div class="form-group">
+                                <div class="checkbox">
+                                    <div class="custome-checkbox">
+                                        <input class="form-check-input" type="checkbox" name="checkbox" id="createaccount" checked disabled>
+                                        <label class="form-check-label label_info" data-bs-toggle="collapse" href="#collapsePassword" data-target="#collapsePassword" aria-controls="collapsePassword" for="createaccount"><span>Create an account?</span></label>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div id="collapsePassword" class="form-group create-account collapse in">
+                        
+                        <div id="collapsePassword" class="form-group create-account">
                             <div class="row">
                                 <div class="col-lg-6">
-                                    <input required="" type="password" id="password" placeholder="Password" name="password">
+                                        <input required type="password" id="passwordAttached" placeholder="Password" name="password">
                                 </div>
                             </div>
                         </div>
+                        }
                         <div class="ship_detail">
                             <div class="form-group">
                                 <div class="chek-form">
                                     <div class="custome-checkbox">
                                         <input class="form-check-input" type="checkbox" name="checkbox" id="differentaddress">
-                                        <label class="form-check-label label_info" data-bs-toggle="collapse" data-target="#collapseAddress" href="#collapseAddress" aria-controls="collapseAddress" for="differentaddress"><span>Ship to a different address?</span></label>
+                                        <label class="form-check-label label_info" data-bs-toggle="collapse" data-target="#collapseAddress" href="#collapseAddress" aria-controls="collapseAddress" for="differentaddress"><span>Ship to a Different address?</span></label>
                                     </div>
                                 </div>
                             </div>
@@ -251,7 +232,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-lg-6">
-                                        <input required="" type="text"id="shippingPostCode" name="zipcode" placeholder="Postcode / ZIP *">
+                                        <input required="" type="text" id="shippingPostCode" name="zipcode" placeholder="Postcode / ZIP *">
                                     </div>
                                 </div>
                             </div>
@@ -270,5 +251,6 @@
     <script>
         let checkOutModel = @Html.Raw(Json.Serialize(Model))
     </script>
+    <script src="~/assets/js/orders/ordersapis.js"></script>
     <script src="~/assets/js/orders/OrdersCheckOut.js"></script>
 }
