--- a/PrimeValLife.Web/Views/Orders/_Cart.cshtml
+++ b/PrimeValLife.Web/Views/Orders/_Cart.cshtml
@@ -1,16 +1,10 @@
-﻿@* @model PrimeValLife.Web.Models.Orders.OrdersCheckOutView *@
+﻿@model PrimeValLife.Core.Models.Users.Cart
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
 <div class="d-flex align-items-end justify-content-between mb-30">
-    <div class="col-lg-8 mb-40">
-        <h1 class="heading-2 mb-10">Your Cart</h1>
-        <div class="d-flex justify-content-between">
-            <h6 class="text-body">There are <span class="text-brand"> @* @Model.Cart.CartItems.Count *@ </span> products in your cart</h6>
-            @* <h6 class="text-body"><a href="#" class="text-muted"><i class="fi-rs-trash mr-5"></i>Clear Cart</a></h6> *@
-        </div>
-    </div>
+    
 </div>
 <div class="d-flex align-items-end justify-content-between">
     <div>
@@ -30,43 +24,17 @@
                     </tr>
                 </thead> *@
                 <tbody>
-                    <tr class="pt-30 w-75">
-                        <td class="custome-checkbox pl-30">
-                            <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="">
-                            <label class="form-check-label" for="exampleCheckbox1"></label>
-                        </td>
-                        <td class="image product-thumbnail pt-40"><img src="assets/imgs/shop/product-1-1.jpg" alt="#"></td>
-                        <td class="product-des product-name">
-                            <h6 class="mb-5"><a class="product-name mb-10 text-heading" href="shop-product-right.html">Field Roast Chao Cheese Creamy Original</a></h6>
-                            <div class="product-rate-cover">
-                                <div class="product-rate d-inline-block">
-                                    <div class="product-rating" style="width:90%">
-                                    </div>
-                                </div>
-                                <span class="font-small ml-5 text-muted"> (4.0)</span>
-                            </div>
-                        </td>
-                        <td class="price" data-title="Price">
-                            <h4 class="text-body">$2.51 </h4>
-                        </td>
-                        <td class="text-center detail-info" data-title="Stock">
-                            <div class="detail-extralink mr-15">
-                                <div class="detail-qty border radius">
-                                    <a href="#" class="qty-down"><i class="fi-rs-angle-small-down"></i></a>
-                                    <input type="text" name="quantity" class="qty-val" value="1" min="1">
-                                    <a href="#" class="qty-up"><i class="fi-rs-angle-small-up"></i></a>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="price" data-title="Price">
-                            <h4 class="text-brand">$2.51 </h4>
-                        </td>
-                        <td class="action text-center" data-title="Remove"><a href="#" class="text-body"><i class="fi-rs-trash"></i></a></td>
-                    </tr>
-                    @* @foreach (var item in Model.CartProducts)
+                    @if ( Model!=null && Model.CartItems.Count >0)
                     {
-                        await Html.RenderPartialAsync("_CartProduct", item);
-                    } *@
+                        @foreach (var item in Model.CartItems)
+                        {
+                            await Html.RenderPartialAsync("_CartProduct", item);
+                        }
+                    }
+                    else
+                    {
+                        <tr><td><a href="home/index">Click here to shop</a></td></tr>
+                        }
                 </tbody>
             </table>
         </div>
