--- a/PrimeValLife.Web/Views/Products/ProductView.cshtml
+++ b/PrimeValLife.Web/Views/Products/ProductView.cshtml
@@ -126,13 +126,13 @@
                                         @* Buyer Submission starts *@
                                         <div class="detail-extralink mb-50">
                                             <div class="detail-qty border radius">
-                                                <a href="#" id="qty-down" class="qty-down"><i class="fi-rs-angle-small-down"></i></a>
+                                                <a  id="qty-down" class="qty-down"><i class="fi-rs-angle-small-down"></i></a>
                                                 <span id="qty-val" class="qty-val">1</span>
-                                                <a href="#" id="qty-up" class="qty-up"><i class="fi-rs-angle-small-up"></i></a>
+                                                <a  id="qty-up" class="qty-up"><i class="fi-rs-angle-small-up"></i></a>
                                             </div>
                                             <div class="product-extra-link2">
                                                 <button type="submit" id="addToCart" class="button button-add-to-cart"><i class="fi-rs-shopping-cart"></i>Add to cart</button>
-                                                    <button type="submit" id="buyNow" class="button button-buy-now"><i class="fi-rs-shopping-bag"></i>@Html.ActionLink("Buy Now","OrdersCheckOut","Orders")</button>
+                                                    <button type="submit" id="buyNow" class="button button-buy-now"><i class="fi-rs-shopping-bag"></i>Buy Now</button>
                                                 <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
                                             </div>
                                         </div>
