--- a/PrimeValLife.Web/Views/Shared/_Global.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Global.cshtml
@@ -4,7 +4,7 @@
 *@
 <script>
     const baseUrl = '@Configuration["HostConfiguration:APIHost"]'
-    const confirmOrderUrl = "Orders/CreateOrder"
+    const orderRequestUrl = "api/OrdersApi/CreateOrder"
     const confirmShippingInfoUrl = "Orders/CreateShippingInfo"
     const directCheckOutUrl = "api/Products/directCheckOut"
     const addToCartUrl = "api/OrdersApi/AddToCart"
