--- a/PrimeValLife.Web/wwwroot/assets/css/pv-style.css
+++ b/PrimeValLife.Web/wwwroot/assets/css/pv-style.css
@@ -13,3 +13,7 @@
 .currency::before {
     content: '\20B9';
 }
+.form-check-input:checked {
+    background-color: #6cb483;
+    border-color: #6cb483;
+}   
