--- a/PrimeValLife.Web/Views/Shared/_Layout.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Layout.cshtml
@@ -53,20 +53,19 @@
                         </div>
                         <div class="header-action-right">
                             <div class="header-action-2">
-                                
-                                <div class="header-action-icon-2">
+                                @* <div class="header-action-icon-2">
                                     <a href="shop-wishlist.html">
                                         <img class="svgInject" alt="Nest" src="assets/imgs/theme/icons/icon-heart.svg" />
                                         <span class="pro-count blue">6</span>
                                     </a>
                                     <a href="shop-wishlist.html"><span class="lable">Wishlist</span></a>
-                                </div>
+                                </div> *@
                                 <div class="header-action-icon-2">
-                                    <a class="mini-cart-icon" href="shop-cart.html">
+                                        <a class="mini-cart-icon" href="@Url.Action("OrdersCheckout","Orders")">
                                         <img alt="Nest" src="assets/imgs/theme/icons/icon-cart.svg" />
                                         <span class="pro-count blue">2</span>
                                     </a>
-                                    <a href="shop-cart.html"><span class="lable">Cart</span></a>
+                                    <a href="@Url.Action("OrdersCheckout","Orders")"><span class="lable">Cart</span></a>
                                     <div class="cart-dropdown-wrap cart-dropdown-hm2">
                                         <ul>
                                             <li>
